Text changes updated
text changes updated in fragment divs

--- a/public/app/partials/Community/advertise.html
+++ b/public/app/partials/Community/advertise.html
@@ -77,7 +77,7 @@
             <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
             <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Advertise</h4>
             <p>
-                TODO
+                Spread the word about your site, store/s, campaigns by advertising on available social networks. You can inform your social circles or customers, partners, friends, connects about Evezown and your site on Evezown through this tool. 
             </p>
         </div>
     </div>
