--- a/public/app/partials/Community/circles.html
+++ b/public/app/partials/Community/circles.html
@@ -76,7 +76,7 @@
             <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
             <h4>Circles</h4>
             <p>
-                Seggregate your eve community into different circles.
+                Compartmentalize, segment your connects as you want, you can segregate your entire database, for example.. Premium customers, suppliers, alliances, colleagues, ex-colleagues
             </p>
         </div>
     </div>
