--- a/public/app/partials/Community/invitefriends.html
+++ b/public/app/partials/Community/invitefriends.html
@@ -77,7 +77,7 @@
             <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
             <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Invite People</h4>
             <p>
-                TODO
+                Invite your real world connections, friends and family to your site and store/s, In effect they will also become members of Evezown. We don’t make all our members visible to each other de-facto. We ensure complete exclusivity for your business, our aim to give privacy that you need for your growth, go ahead, safely  invite your customers too.
             </p>
         </div>
     </div>
