--- a/public/app/partials/profile/myAlbum.html
+++ b/public/app/partials/profile/myAlbum.html
@@ -141,7 +141,7 @@
 	            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
 	            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Gallery</h4>
 	            <p>
-	                TODO
+	                This is a photo gallery to showcase yourself, your venture, business and aspirations, share with your circles, audience, your can choose.
 	            </p>
 	        </div>
 	    </div>
