--- a/public/app/partials/profile/myevent.html
+++ b/public/app/partials/profile/myevent.html
@@ -140,7 +140,7 @@
 			            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
 			            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Events</h4>
 			            <p>
-			                TODO
+			                You can create Events, online events as well as reflect real life events- parties, get together and seminars, host of features available to automate all your event planning and execution! Capture the fun element 
 			            </p>
 			        </div>
 			    </div>
