--- a/public/app/partials/profile/mygroup.html
+++ b/public/app/partials/profile/mygroup.html
@@ -141,7 +141,7 @@
             <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
             <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Groups</h4>
             <p>
-                TODO
+                You have a special purpose, people who share your purpose, create a group, add activity and propagate.
             </p>
         </div>
     </div>
