--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -169,15 +169,15 @@
             </div>
 
             <div class="col-md-10 user-menu user-pad" ng-controller="trending">
-                <h3 style="font-size: 1.5em">
+                <!-- <h3 style="font-size: 1.5em">
                     Recent activity
-                </h3>
+                </h3> -->
 				<div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
 			        <div class="fragment">
 			            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
 			            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Recent activity</h4>
 			            <p>
-			                TODO
+			                Activity on your site, all your streams in recent times will appear her, you control the visibility, who sees what!
 			            </p>
 			        </div>
 			    </div>
