--- a/public/app/partials/profile/myBlog.html
+++ b/public/app/partials/profile/myBlog.html
@@ -140,7 +140,7 @@
             <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
             <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Blogs</h4>
             <p>
-                TODO
+                Express your thoughts through articles and blogs, you can write free flow, all features for smart editing are available to make writing simple. Share and control visibility.
             </p>
         </div>
     </div>
