--- a/public/app/partials/profile/myAlbum.html
+++ b/public/app/partials/profile/myAlbum.html
@@ -178,9 +178,10 @@
     <div class="ngdialog-buttons popuptemplate" ng-controller="albums">
         <h4>Add album</h4>
         <input class="form-control" type="text" placeholder="Album Title"
-               id="circle" ng-model="album" style="margin-bottom: 10px; height: 50px; font-size: 18px"/>
+               id="circle" ng-model="album" maxlength="100" style="margin-bottom: 10px; height: 50px; font-size: 18px"/>
+               <span class="pull-right" ng-hide="album == dirty">{{100 - album.length}}</span>
         <textarea class="form-control" rows="4" placeholder="Album Description (optional)"
-                  ng-model="description"/>
+                  ng-model="description"/><br>
         <button class="btn primary pull-right form-control" type="button" ng-click="SaveAlbum()">Add</button>
     </div>
 </script>
