--- a/public/app/partials/Trending/trending.html
+++ b/public/app/partials/Trending/trending.html
@@ -262,8 +262,8 @@
             <!-- Posting area Ends-->
             <!-- Content area starts -->
             <!-- show Posts -->
-            <div class="col-md-6 grid-view" style="padding:5px;" ng-repeat="post in posts">
-            <div class="col-md-12 trending-section" style="border:solid 1px #ccc;border-radius:4px;">
+            <div class="col-md-6 grid-view" style="padding:5px;" ng-repeat="post in posts track by $index">
+            <div class="col-md-12 trending-section" style="border:solid 1px #ccc;border-radius:4px;" ng-if="post">
                 <div class="col-md-12 zero-padding-left-right" >
                     <!-- username-->
                     <div class="col-md-2 col-xs-2">
