Delete confirmation added

--- a/public/app/views/admin/evezplace/recommendations_partial.html
+++ b/public/app/views/admin/evezplace/recommendations_partial.html
@@ -98,8 +98,7 @@
                                   class="fa fa-caret-up"></span>
                             <span ng-if="!recommendation.isEditActive" class="fa fa-edit"> edit</span>
                         </a>
-                        <a href ng-click="DeleteRecomondation(recommendation)"
-                           class="btn btn-link">
+                        <a href ng-really-message="Are you sure to delete?" ng-really-click="DeleteRecomondation(recommendation)" class="btn btn-link">
                             <i class="fa fa-trash" aria-hidden="true"> Delete</i>
                         </a>
                     </div>
