--- a/public/app/partials/evezplace/productSearch.html
+++ b/public/app/partials/evezplace/productSearch.html
@@ -18,12 +18,11 @@
                 <div class="col-md-12 no-padding">
                     <h4 class="search-products-header">Price Range</h4>
                     <div class="col-md-12" style="background-color: #F7F7F7;">
-                        <h4>Enter Price Range</h4>
-                        
-                        <input type="text" class="form-control" placeholder="Eg: 1200 - 1900"/><br>
+                        <h4>Select Price Range</h4>
 
-                        <div class="col-md-7 col-md-offset-2 text-center">
-                            <button class="btn btn-primary btn-block" ng-click="">Get Products</button><br>
+                        <div ng-repeat="Range in Ranges">
+                            <input type="checkbox" ng-checked="selectedRange.indexOf(Range) > -1" ng-click="PriceRange(Range)">
+                            <label style="font-weight:normal;">{{Range}}</label><br>
                         </div>
                     </div>
                 </div>
