community menu changes updated

--- a/public/app/partials/Community/circles.html
+++ b/public/app/partials/Community/circles.html
@@ -54,20 +54,20 @@
 <div class="col-md-2 user-menu-btns">
     <div class="btn-group-vertical square" id="responsive">
         <a href="#community" class="btn btn-default">
-            <p>Connect</p>
-        </a>
-        <a href="#advertise" class="btn btn-default btn-block">
-            <p>Advertise</p>
-        </a>
-        <a href="#circles" class="btn btn-default btn-block  active">
-            <p>Circles</p>
-        </a>
-        <a href="#friends/invite" class="btn btn-default">
             <p>Invite People</p>
         </a>
         <a href="#invitehistory" class="btn btn-default">
             <p>Invite History</p>
         </a>
+        <a href="#circles" class="btn btn-default btn-block  active">
+            <p>Circles</p>
+        </a>
+        <a href="#advertise" class="btn btn-default btn-block">
+            <p>Advertise</p>
+        </a>
+        <!-- <a href="#friends/invite" class="btn btn-default">
+            <p>Invite People</p>
+        </a> -->
     </div>
 </div>
 <div class="col-md-10 user-menu user-pad" ng-controller="circles">
