--- a/public/app/partials/evezplace/browse/store/shopping-cart.html
+++ b/public/app/partials/evezplace/browse/store/shopping-cart.html
@@ -1,7 +1,6 @@
 <div class="col-xs-12">
-    <h3>Shopping Cart</h3>
+     <h3>Cart ({{shoppingCartCount}})</h3>
 </div>
-
 
 <div class="col-sm-12" ng-if="isShoppingCartEmpty">
     <div class="row" style="margin-top: 120px; margin-bottom: 120px">
@@ -51,7 +50,7 @@
                             <td data-title="'Total'">&#x20b9; {{+shoppingCartItem.quantity * +shoppingCartItem.price}}
                             </td>
                             <td class="col-sm-2 col-md-2 col-lg-2" data-title="''">
-                                <a ng-click="removeFromCart(shoppingCartItem)" class="btn btn-link pull-right"><span
+                                <a ng-click="removeFromCart(shoppingCartItem.product_id, 'true')" class="btn btn-link pull-right"><span
                                         style="color: #e51385">remove</span></a>
                             </td>
                         </tr>
@@ -87,12 +86,14 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12" style="margin-top: 40px; margin-bottom: 20px">
-                    <a ng-click="placeOrder()" class="btn btn-primary btn-block btn-lg">Place Order</a>
-                </div>
+                <div class="row">
+                    <div class="col-sm-12" style="margin-bottom: 10px">
+                        <a href="#checkout/cart" class="btn btn-primary btn-block btn-lg">Place Order</a>
+                    </div>
 
-                <div class="col-sm-12">
-                    <a href="#store/browse" class="btn btn-block btn-primary btn-lg">Continue Shopping</a>
+                    <div class="col-sm-12">
+                        <a href="#store/browse" class="btn btn-block btn-primary btn-lg">Continue Shopping</a>
+                    </div>
                 </div>
             </div>
         </div>
