--- a/public/app/partials/shoppingcart.tpl.html
+++ b/public/app/partials/shoppingcart.tpl.html
@@ -35,9 +35,38 @@
                     <hr ng-if="$index != shoppingCartStore.products.length - 1" style="margin-top: 5px; margin-bottom: 5px">
                 </div>
             </div>
+            <!-- Adding Total price and shipping per store. -->
+            <hr style="margin-top: 5px; margin-bottom: 5px">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-8">
+                            <h4 style="font-weight: 400" class="pull-right">Total:</h4>
+                        </div>
+                        <div class="col-xs-4">
+                            <h4 style="font-weight: 400" class="pull-right"> &#8377; {{shoppingCartStore.total_price}}</h4>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+             <!-- Adding view cart and checkout cart per store.-->
+             <div class="row">
+                <div class="col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-6">
+                           <!-- <a href="#checkout/cart" class="btn btn-primary pull-right" style="border-radius: 3px">checkout</a> -->
+                        </div>
+                        <div class="col-xs-6">
+                            <a href="#store/shopping/cart" class="btn btn-default  pull-right" style="border-radius: 3px">view cart</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-    <hr style="margin-top: 5px; margin-bottom: 5px">
+    <!-- <hr style="margin-top: 5px; margin-bottom: 5px">
     <div class="row">
         <div class="col-xs-12">
             <div class="row">
@@ -58,8 +87,8 @@
             </div>
             <hr>
         </div>
-    </div>
-    <div class="row">
+    </div> -->
+   <!--  <div class="row">
         <div class="col-xs-12">
             <div class="row">
                 <div class="col-xs-6">
@@ -70,6 +99,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 
